--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "HerokuTestOne",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "engines": {
+    "node": ">=6.0.0",
+    "yarn": ">=0.25.2"
+  }
 }
